Integrate user controller v2
