# Routes/userRoutes.js
@@ -39,6 +39,7 @@ var routes=function(User, passport, data){
             }
         });
     });
+
     userRotuer.route('/logins')
         .get(function(req, res) {
             var data = {
@@ -48,48 +49,19 @@ var routes=function(User, passport, data){
             }
 
             res.send(data);
-        })
-       /* .put(function(req, res){
-                    req.book.title=req.body.title;
-                    req.book.author=req.body.author;
-                    req.book.genre=req.body.genre;
-                    req.book.read=req.body.read;
-                    req.book.save(function (err) {
-                        if(err)
-                            res.status(500).send();
-                        else
-                            res.json(req.book);
-                    });
-        })
-        .patch(function (req, res) {
-            if(req.body._id)
-                delete req.body._id;
-            for(var item in req.body){
-                req.book[item]=req.body[item];
+        });
+
+    userRotuer.route('/logouts')
+        .get(function(req, res) {
+            req.logOut();
+            var data = {
+                code : 200,
+                msg : "Successfully!",
+                data : req.user
             }
-            req.book.save(function(err){
-                if(err){
-                    res.status(500).send();
-                }else{
-                    res.json(req.book);
-                }
-            });
-            /!*if(req.book.title){
-                req.book.title=req.body.title;
-                req.book.save();
-                res.json(req.book);
-            }else{
-                res.status(404).send("Required book title");
-            }*!/
-        })
-        .delete(function(req, res) {
-            req.book.remove(req.book, function(err, book){
-                if(err)
-                    res.status(500).send();
-                else
-                    res.json(req.book)
-            })
-        })*/;
+           // res.redirect('/');
+             res.send(data);
+        });
 
     return userRotuer;
 };
